# investment-research-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.yaml
.github/workflows/: ci.yml
cli/: main.py
eval_data/scenarios/: earnings_scenarios.yaml  sec_filing_scenarios.yaml
lambda/: ingest_handler.py  query_handler.py
src/rag/: __init__.py  config.py
src/rag/chunking/: __init__.py  base.py  excel_chunker.py  factory.py  research_chunker.py  schemas.py  scoring.py  sec_chunker.py  transcript_chunker.py
src/rag/documents/: __init__.py  boilerplate.py  loader.py  sanitize.py  schemas.py  sec_parser.py  transcript_parser.py
src/rag/embeddings/: __init__.py  base.py  factory.py  huggingface_provider.py  ollama_provider.py  openai_provider.py
src/rag/evaluation/: __init__.py  answer_grader.py  retrieval_metrics.py  runner.py  schemas.py
src/rag/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py
src/rag/pipeline/: __init__.py  citations.py  ingest.py  prompts.py  query.py  schemas.py
src/rag/retrieval/: __init__.py  reranker.py  retriever.py  schemas.py
src/rag/vectorstore/: __init__.py  base.py  factory.py  faiss_store.py  opensearch_store.py  qdrant_store.py  schemas.py
terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/api/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/ingest/: main.tf  outputs.tf  variables.tf
terraform/modules/query/: main.tf  outputs.tf  variables.tf
terraform/modules/queue/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
terraform/modules/vectordb/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_boilerplate.py  test_chunkers.py  test_embeddings.py  test_evaluation.py  test_lambda_handlers.py  test_loader.py  test_pipeline.py  test_retrieval.py  test_sanitize.py  test_scoring.py  test_sec_parser.py  test_vectorstore.py
